--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "dotenv": "^16.0.3",
     "express": "4.17.1",
     "gravatar": "^1.8.2",
+    "jimp": "^0.16.2",
     "joi": "^17.6.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.6.2",
+    "mongoose": "^6.6.7",
     "morgan": "1.10.0",
     "multer": "^1.4.5-lts.1",
     "nanoid": "3.3.4"
